--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Welcome</h1>
+<h1 class="page-header">Welcome to Mentor City</h1>
+<p class="lead">Check all available mentors <%= link_to "Mentors Profile", profiles_path %></p>
 
