--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -1,3 +1,196 @@
-// Place all the styles related to the Profiles controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+@charset "utf-8";
+
+// variables
+$white:         #ffffff;
+$red:           #E9342C;
+$yellow:        #ECC30A;
+$dark-blue:     #1D2C3F;
+$light-blue:    #478CBA;
+$light-green:   #8BC058;
+$good:          rgb(26, 188, 156);
+$bad:           rgb(231, 76, 60);
+$blue-navy:     #3A539B;
+$light-gray-bg: #F9F9F9;
+$body-color:    #5A5A5A;
+$gray-body:     #777777;
+
+html {
+    font-size: 0.625em; /* 1 */
+    -webkit-text-size-adjust: 0.625em; /* 2 */
+    -ms-text-size-adjust: 0.625em; /* 2 */
+}
+
+html, body {
+  height: 100%;
+}
+// https://github.com/philipwalton/solved-by-flexbox/blob/master/assets/css/components/site.css
+header, footer { flex: none; /* 2 */}
+body.events{
+  display: flex;
+  flex-direction: column;
+  height: 100%; /* 1, 3 */
+}
+body{
+  font-family: 'Montserrat', sans-serif;
+  color: $body-color;
+  font-size: 1.2em;
+  font-style: normal;
+  position: relative;
+  margin: 0;
+  padding: 0;
+  text-rendering: geometricPrecision;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  line-height: 1.6em;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+::selection {
+    background: $blue-navy;
+}
+::selection {
+    background: $blue-navy;
+    color: $white;
+}
+
+a {
+  cursor: pointer;
+  text-decoration: none;
+  transition: color 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955),border-color 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955),background-color 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955),background-image 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  color: $blue-navy;
+  font-weight: 500;
+  -webkit-tap-highlight-color: rgba(129,94,255,0.08);
+  &:active, &:hover {
+    outline: 0;
+  }
+  &:hover, &:active, &:focus {
+    color: $dark-blue;
+  }
+}
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 600;
+  line-height: 1.5;
+  margin: 0 0 30px;
+}
+.header {
+  .navbar-default .navbar-nav > li > a {
+    color: $blue-navy;
+    &:hover {
+      color: #333333;
+    }
+  }
+}
+.navbar-default {
+  border-bottom: 1px solid #e7e7e7;
+  .navbar-brand {
+    color: $blue-navy;
+  }
+}
+
+
+////////////////////////////
+// headers
+.first-header {
+  background-color: #3797ea;
+  margin-bottom: 0;
+  z-index: 9999;
+  a {
+    color: #fff;
+    background-color: transparent !important;
+    &:hover {
+      background-color: transparent !important;
+    }
+  }
+  ul {
+    z-index: 9999;
+    overflow: visible;
+  }
+}
+
+.second-header{
+  background-color: #fff;
+  margin-bottom: 0;
+  border-bottom: 3px solid #dedede;
+  .navbar {
+    margin-bottom: -1px;
+    min-height: 70px;
+    padding-top: 10px;
+    a {
+      color: $gray-body;
+      &:hover {
+        // font-weight: bold;
+        // background-color: transparent;
+        // border-bottom: 5px solid orange;
+        // padding-bottom: 18px;
+      }
+    }
+    a.navbar-brand {
+      font-size: inherit;
+      color: white;
+      background-color: #777777;
+      &:hover {
+        font-weight: normal;
+        border: none;
+      }
+    }
+  }
+}
+
+.active {
+  font-weight: bold;
+  background-color: transparent;
+  border-bottom: 5px solid orange;
+  padding-bottom: 3px;
+}
+///////////////////////
+// profile
+.profile {
+  margin-top: 2em;
+  margin-bottom: 5em;
+  .welcome {
+    border-bottom: 1px solid #eee;
+  }
+  h3 {
+    margin-bottom: 0.5em;
+  }
+  //  LEFT SIDE
+  .left-side{
+    margin-top: 3em;
+    .avatar {
+      display: inline-block;
+      margin-bottom: 2em;
+    }
+    .col-md-3 {
+      background-color: #f5f5f5;
+      padding: 3em;
+      margin-right: 2em;
+      border-top: 0.6em solid #3797ea;
+    }
+  }
+  // right SIDE
+  .right-side{
+    .panel {
+      textarea, select {
+        width: 100%;
+        min-height: 150px;
+      }
+    }
+    .panel-heading{
+      h3 {
+        margin-bottom: 0;
+      }
+    }
+    .table {
+      margin-bottom: 0;
+      td {padding-top:15px;}
+      input {
+        width: 100%;
+        padding: 0.5em;
+      }
+    }
+  }
+
+
+}
