--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TiniModelStructure</title>
+    <title><%= full_title(yield(:page_title)) %></title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <ul>
-      <% if user_signed_in? %>
-        <li>Welcome, <%= current_user.profile.first_name %></li>
-        <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
-        <li><%= link_to "My settings", edit_user_registration_path %></li>
-        <li><%= link_to 'Profile', profile_path(current_user.profile) if current_user.profile %>
-</li>
-      <% else %>
-        <li><%=link_to "Sign up", new_user_registration_path %></li>
-        <li><%= link_to  "Sign in", new_user_session_path %></li>
-      <% end %>
-    </ul>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <%= yield %>
+    <header class="navbar navbar-static-top first-header">
+      <div class="container">
+        <%= render 'layouts/partials/first_navbar' %>
+      </div>
+    </header>
+
+    <header class="navbar navbar-static-top second-header">
+      <div class="container">
+        <%= render 'layouts/partials/second_navbar' %>
+      </div>
+    </header>
+    <div class="container">
+      <%= yield %>
+    </div>
+
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </body>
 </html>
