--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,75 +1,119 @@
-<%= form_for @profile do |f| %>
+<%= content_for :page_title, @profile.first_name.capitalize + " profile"%>
+<article id="profile" class="profile">
+  <%= form_for @profile do |f| %>
 
-  <% if profile.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(profile.errors.count, "error") %> prohibited this profile from being saved:</h2>
+    <% if profile.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(profile.errors.count, "error") %> prohibited this profile from being saved:</h2>
 
-      <ul>
-      <% profile.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+        <ul>
+        <% profile.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+    <div class="row">
+      <section class="left-side">
+        <div class="col-md-4">
+          <%= image_tag @profile.avatar.url(:medium), class:"avatar" %>
+          <P>Change your profile photo <%= f.file_field :avatar %></P>
+          <br>
+          <% if user_signed_in? %>
+            <% if @profile.user_id == current_user.id %>
+              <%= link_to 'Edit my Settings', edit_user_registration_path, class:"btn btn-warning", role:"button" %>
+            <% end %>
+          <% end %>
+
+        </div>
+      </section>
+
+      <section class="right-side">
+        <div class="col-md-8">
+          <div class="panel panel-default">
+            <!-- Default panel contents -->
+            <div class="panel-heading"><h3>About...</h3></div>
+
+            <!-- List group -->
+            <ul class="list-group">
+              <table class="table">
+                <tbody>
+                  <tr>
+                    <td style="width: 20%;"><strong>First Name:</strong></td>
+                    <td><%= f.text_field :first_name, autofocus: true %></td>
+                  </tr>
+
+                  <tr>
+                    <td style="width: 20%;"><strong>Last Name:</strong></td>
+                    <td><%= f.text_field :last_name %></td>
+                  </tr>
+
+                  <tr>
+                    <td style="width: 20%;"><strong>Company:</strong></td>
+                    <td><%= f.text_field :company%></td>
+                  </tr>
+                  <tr>
+                    <td style="width: 20%;"><strong>City:</strong></td>
+                    <td><%= f.text_field :city %></td>
+                  </tr>
+                  <tr>
+                    <td style="width: 20%;"><strong>Country:</strong></td>
+                    <td><%= f.text_field :country %></td>
+                  </tr>
+                  <tr>
+                    <td style="width: 20%;"><strong>Gender:</strong></td>
+                    <td><%= f.text_field :gender %></td>
+                  </tr>
+                </tbody>
+              </table>
+            </ul>
+          </div>
+
+          <div class="panel panel-default">
+            <!-- Default panel contents -->
+            <div class="panel-heading"><h3>Summery</h3></div>
+            <div class="panel-body">
+              <p><%= f.text_area :summery %></p>
+            </div>
+            <!-- List group -->
+          </div>
+
+          <div class="panel panel-default">
+            <!-- Default panel contents -->
+            <div class="panel-heading"><h3>Specialized Skills</h3></div>
+            <div class="panel-body">
+              <p><%= f.collection_select :skill_ids, Skill.all, :id, :name, {}, {:multiple => true} %></p>
+            </div>
+            <!-- List group -->
+          </div>
+
+
+          <div class="panel panel-default">
+            <!-- Default panel contents -->
+            <div class="panel-heading"><h3>Job Functions</h3></div>
+            <div class="panel-body">
+              <p><%= f.collection_select :job_ids, Job.all, :id, :name, {}, {:multiple => true} %></p>
+            </div>
+            <!-- List group -->
+          </div>
+
+
+          <div class="panel panel-default">
+            <!-- Default panel contents -->
+            <div class="panel-heading"><h3>Industries</h3></div>
+            <div class="panel-body">
+              <p><%= f.collection_select :industry_ids, Industry.all, :id, :name, {}, {:multiple => true} %></p>
+            </div>
+            <!-- List group -->
+          </div>
+
+          <div class="actions">
+            <%= f.submit class:"btn btn-primary" %>
+          </div>
+
+        </div>
+      </section>
     </div>
   <% end %>
+</article>
 
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name%>
-  </div>
-
-  <div class="field">
-    <%= f.file_field :avatar %>
-  </div>
-
-  <div class="field">
-    <%= f.label :company %><br />
-    <%= f.text_field :company%>
-  </div>
-
-  <div class="field">
-    <%= f.label :summery %>
-    <%= f.text_area :summery %>
-  </div>
-
-  <div class="field">
-    <%= f.label :city %>
-    <%= f.text_field :city %>
-  </div>
-
-  <div class="field">
-    <%= f.label :country %>
-    <%= f.text_field :country %>
-  </div>
-
-  <div class="field">
-    <%= f.label :gender %>
-    <%= f.text_field :gender %>
-  </div>
-
-
-  <!-- We add this to the Registration form so we can create a new company. You can add more company fields here -->
-  <div class="field">
-    <%= f.label "Specialized Skills"  %><br />
-    <%= f.collection_select :skill_ids, Skill.all, :id, :name, {}, {:multiple => true} %>
-</div>
-
-  <div class="field">
-    <%= f.label "Industry"  %><br />
-    <%= f.collection_select :industry_ids, Industry.all, :id, :name, {}, {:multiple => true} %>
-</div>
-
-
-  <div class="field">
-    <%= f.label "Job Function"  %><br />
-    <%= f.collection_select :job_ids, Job.all, :id, :name, {}, {:multiple => true} %>
-</div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
