--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Profile</h1>
-
+<div class="row welcome">
+  <h2 class="page-header">Editing your Profile</h2>
+</div>
 <%= render 'form', profile: @profile %>
-
-<%= link_to 'Show', profile_path %> |
-<%= link_to 'Back', profiles_path %>
