--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -23,6 +23,24 @@ html {
 html, body {
   height: 100%;
 }
+.site {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+.content {
+  flex: 1;
+}
+footer{
+  background-color: $gray-body;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+}
+
+
 // https://github.com/philipwalton/solved-by-flexbox/blob/master/assets/css/components/site.css
 header, footer { flex: none; /* 2 */}
 body.events{
@@ -139,10 +157,28 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .active {
-  font-weight: bold;
   background-color: transparent;
   border-bottom: 5px solid orange;
   padding-bottom: 3px;
+  a {
+    font-weight: bold;
+  }
+}
+
+.dvider {
+  display: block;
+  position: relative;
+  padding: 0;
+  margin: 8px auto;
+  height: 0;
+  width: 100%;
+  max-height: 0;
+  font-size: 1px;
+  line-height: 0;
+  clear: both;
+  border: none;
+  border-top: 1px solid #cccccc;
+ border-bottom: 1px solid #ffffff;
 }
 ///////////////////////
 // profile
@@ -191,6 +227,66 @@ h1, h2, h3, h4, h5, h6 {
       }
     }
   }
+}
 
 
+///////////
+// Profiles
+.all-profiles {
+  background-color: #f5f5f5;
+  height: 100vh;
+  .top-search {
+    height: 20em;
+    background-color: #fff;
+    margin-left: -15px;
+    margin-right: -15px;
+    border-bottom: 2px solid #ddd;
+    margin-bottom: 5em;
+    form {
+      margin-top: 5em;
+      select {
+        width: 200px;
+        height: 3em;
+        background-color: #fff;
+        margin-right: 5em;
+      }
+      input.btn-primary{
+        color: #fff;
+        background-color: #3797ea;
+        border-color: #3797ea;
+        width: 200px;
+        height: 3em;
+      }
+    }
+  }
+  .mentor-profile {
+    background-color: #fff;
+    height: 100%;
+    padding: 2em;
+    box-shadow: 1px 1px 1px #ccc;
+    margin-right: 3em;
+  }
+  img {
+    border-radius: 100%;
+  }
+  h4 {
+    color: #3797ea;
+  }
+  .media-left, .media > .pull-left {
+      padding-right: 30px;
+  }
+  .media {
+    margin-bottom: 3em;
+    a { color: #3797ea;}
+  }
+  .profile-section {
+    margin-top: 2em;
+    h5 {
+      margin-bottom: 0.5em;
+    }
+  }
+  .flex-container {
+    display: flex;
+    justify-content: center;
+  }
 }
