--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,4 +1,6 @@
-<div class="row welcome">
-  <h2 class="page-header">Editing your Profile</h2>
+ <div class="container">
+  <div class="row welcome">
+    <h2 class="page-header">Editing your Profile</h2>
+  </div>
 </div>
 <%= render 'form', profile: @profile %>
