--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Profile</h1>
-
+ <div class="container">
+  <div class="row welcome">
+    <h2 class="page-header">Fill your Profile</h2>
+  </div>
+</div>
 <%= render 'form', profile: @profile %>
 
 <%= link_to 'Back', profiles_path %>
